# x16-emu-android

./: .gitignore  README.md  build.gradle
SDL2/: cmake_install.cmake
SDL2/src/audio/android/: SDL_androidaudio.c
SDL2/src/core/android/: SDL_android.c
SDL2/src/test/: SDL_test_common.c
SDL2/src/video/: SDL_egl.c
SDL2_gfx/: cmake_install.cmake
SDL2_image/: cmake_install.cmake
SDL2_jpeg/: cmake_install.cmake
SDL2_mixer/: cmake_install.cmake
SDL2_png/: cmake_install.cmake
SDL2_ttf/: cmake_install.cmake
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: AUTOBOOT.X16  XIXIT.PRG
app/src/main/java/de/waldheinz/fs/fat/: FatFileSystem.java
app/src/main/java/de/waldheinz/fs/util/: FileDisk.java  ImageBuilder.java
app/src/main/java/dk/applimate/x16emu/: SDLActivity.java  UiView.java
app/src/main/res/values/: ic_launcher_background.xml  strings.xml
app/src/main/res/xml/: keyboard.xml
freetype/: cmake_install.cmake
gradle/wrapper/: gradle-wrapper.properties
main/: CMakeLists.txt  build.gradle
main/src/: SDL_android_main.c  files.c  glue.h  main.c  main2.c  memory.c  video.c  ymglue.cpp
main/src/cpu/: fake6502.c
